[metadata]
name = mlpro_int_hyperopt
version = 0.1.0
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration Hyperopt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro-int-hyperopt.readthedocs.io
project_urls =
    Bug Tracker = https://mlpro-int-hyperopt.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    dill
    numpy
    matplotlib
    multiprocess
    mlpro
    hyperopt
    pandas
